# src/index.js
@@ -13,6 +13,7 @@ import authenticateJWT from "./jwtMiddleware.js";
 
 import { handleAddBook, handleGetUserActivity, handleModifyDate, handleFinishActivity, handleCancelBook} from "./controllers/book.controller.js";
 import { handleAddWish, handleDeleteWish, handleGetUserWish } from "./controllers/wish.controller.js";
+import { handleAddReview } from "./controllers/review.controller.js";
 
 dotenv.config();
 
@@ -100,6 +101,7 @@ app.patch('/api/user/activity', authenticateJWT, handleFinishActivity);
 app.post('/api/wish', authenticateJWT, handleAddWish);
 app.delete('/api/wish', authenticateJWT, handleDeleteWish);
 app.get('/api/user/wishlist', authenticateJWT, handleGetUserWish);
+app.post('/api/review', authenticateJWT, handleAddReview);
 
 // 비인증 API
 app.get('/public', (req, res) => {
